--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,7 @@ lib_deps =
     knolleary/PubSubClient@^2.8
     bblanchon/ArduinoJson@^7.4
     marian-craciunescu/ESP32Ping@^1.7
+    https://github.com/ESP32Async/ESPAsyncWebServer.git
+    https://github.com/ESP32Async/AsyncTCP.git
 board_build.filesystem = littlefs
+extra_scripts = pre:scripts/build_interface.py
