feat: Add support for saving targets and enhance configuration management
- Introduced `resolve_names` option in configuration to control name resolution.
- Added `parseTargetsPayload` method in `ConfigStore` to handle targets configuration.
- Updated `App` component to manage toast notifications for save actions.
- Enhanced `SettingsPage` and `TargetsForm` components to support saving targets.
- Modified `StatusPage` to include a button for triggering scans.
- Updated WebSocket handling to support `save_targets` message type.
- Improved deployment scripts for better configuration management and backup.
- Added comprehensive README for backup and deployment scripts.

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,7 +5,7 @@
 ;   Library options: dependencies, extra library storages
 ;   Advanced options: extra scripting
 ;
-; Please visit documentation for the other options and examples
+; Please visit documentation for other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:seeed_xiao_esp32c3]
@@ -14,11 +14,12 @@ board = seeed_xiao_esp32c3
 framework = arduino
 monitor_speed = 115200
 build_flags = -DMQTT_MAX_PACKET_SIZE=768
-lib_deps = 
+lib_deps =
     knolleary/PubSubClient@^2.8
     bblanchon/ArduinoJson@^7.4
     marian-craciunescu/ESP32Ping@^1.7
     https://github.com/ESP32Async/ESPAsyncWebServer.git
     https://github.com/ESP32Async/AsyncTCP.git
 board_build.filesystem = littlefs
-extra_scripts = pre:scripts/build_interface.py
+extra_scripts =
+    pre:scripts/build_interface.py
